--- a/eks-deploy-from-ecr.yaml
+++ b/eks-deploy-from-ecr.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: my-springboot-app
-        image: 211223789150.dkr.ecr.us-east-1.amazonaws.com/my-docker-repo
+        image: public.ecr.aws/j8v7v6p4/my-docker-repo
         imagePullPolicy: Always
         ports:
         - containerPort: 8085
