update image in deploy-loadbalancer.yml file

--- a/deploy-loadbalancer.yml
+++ b/deploy-loadbalancer.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: ak-angular-app
-        image: ananthkannan/myspringbootapp:latest
+        image: public.ecr.aws/d9y6s4g6/akg_eks_ecr_repo:latest
         ports:
         - containerPort: 8085
         
