--- a/springboot-lb.yaml
+++ b/springboot-lb.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: my-angular-app
-        image: akdevopscoaching/mywebapp:latest
+        image: public.ecr.aws/d9y6s4g6/akg_eks_ecr_repo:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 8085
